# esp32

./: README.md  partitions.csv  需求.md
main/: CMakeLists.txt  app_config.h  comm_command.c  comm_command.h  comm_protocol.c  comm_protocol.h  comm_udp.c  comm_udp.h  ctrl_failsafe.c  ctrl_failsafe.h  ctrl_ntc.c  ctrl_ntc.h  ctrl_pid.c  ctrl_pid.h  main.c  periph_adc.c  periph_adc.h  periph_i2c.c  periph_i2c.h  periph_pwm.c  periph_pwm.h  periph_wf5803f.c  periph_wf5803f.h  sys_ota.c  sys_ota.h
